parte de pistas, cards y el body

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <!-- fuente nav -->
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+<!-- fuente h2 -->
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Orbitron&family=Russo+One&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
